test/expected/cli/calc_interactive.out
== a located error carets the bad token:
shit: 1:15: error: Unexpected '.0' after the expression.
     1 |  2312312 / 1323.0
       |                ^~ here.
note: An operator is missing between two values.
== a valid expression prints the value:
14
== 128-bit width still prints in full:
1180591620717411303424
== -i evaluates each piped line, continuing past a bad one:
2
shit: 1:1: error: The variable 'bad' is not set.
     1 |  bad +
       |  ^~~ here.
100
